cmake_minimum_required(VERSION 3.24)
project(CSR)

set(CMAKE_CXX_STANDARD 14)

add_executable(CSR
        .2014044.cpp
        2013121.cpp
        2013122.cpp
        2013123.cpp
        2013124.cpp
        2013125.cpp
        2014031.cpp
        2014032.cpp
        2014033.cpp
        2014034.cpp
        2014035.cpp
        2014091.cpp
        2014092.cpp
        2014093.cpp
        2014094.cpp
        2014095.cpp
        2014121.cpp
        2014122.cpp
        2014123.cpp
        2014124.cpp
        2014125.cpp
        2015032.cpp
        2015033.cpp
        2015034.cpp
        2015035.cpp
        2015092.cpp
        2015093.cpp
        2015094.cpp
        2015095.cpp
        2015121.cpp
        2015122.cpp
        2015123.cpp
        2015124.cpp
        2015125.cpp
        2015301.cpp
        2015901.cpp
        2016041.cpp
        2016042.cpp
        2016043.cpp
        2016091.cpp
        2016092.cpp
        2016093.cpp
        2016094.cpp
        2016095.cpp
        2016121.cpp
        2016122.cpp
        2016123.cpp
        2016124.cpp
        2016125.cpp
        2016405.cpp
        2017031.cpp
        2017032.cpp
        2017033.cpp
        2017034.cpp
        2017035.cpp
        2017091.cpp
        2017092.cpp
        2017093.cpp
        2022032.cpp
        2022032_2.cpp
        2022033.cpp
        2022034.cpp
        2022034_2.cpp
        2022061.cpp
        2022062.cpp
        2022063.cpp
        2022064.cpp
        2022065.cpp
        2022091.cpp
        2022092.cpp
        2022093.cpp
        test.cpp)
